# zorka

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  configuration.yaml  input.css  tailwind.config.js
assets/: script.js  style.css
docs/en/: _readme.md  zorka_files_and_backups.md
src/: authentication.rs  configuration.rs  database.rs  main.rs  routes.rs  schema.rs  tests.rs
templates/: dashboard.html  share.html
templates/gate/: approval.html  blocker.html  countdown.html
