[package]
name = "unnamed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
dotenv = "0.15.0"
env_logger = "0.8.4"
log = "0.4.0"
nanoid = "0.4.0"
serde_json = "1.0.83"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6.1", features = ["runtime-actix-native-tls", "sqlite"] }
