[package]
name = "zorka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1"
actix-files = "0.6"
dotenv = "0.15"
env_logger = "0.8"
log = "0.4"
regex = "1.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = ["runtime-actix-native-tls", "sqlite"] }
tera = "1.17"
