[package]
name = "zorka"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1"
actix-files = "0.6"
regex = "1.7"
serde_json = "1.0"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
tera = "1.17"
base64 = "0.21"
qrcode = "0.12"
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "macro-diagnostics"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
